# aeld-final-project-mobile-app

./: CMakeLists.txt  Main.qml  main.cpp  sslclient.cpp  sslclient.h
